2013-04-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py, theme/Default/status.html, view.py:
	  Improved a scheme for Twitter interfaces.

2013-04-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!

2013-04-21  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* html/heart_*.png: Added new 'heart' icons for Tumblr.
	* updatewindow.py, menu.py: Dropped support for Ubuntu Oneiric.

2013-04-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.4 release.

2013-04-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/account.py, tumblr/entry.py: Added support for Tumblr
	  'Reblog' & 'Like'.
	* updatewindow.py, update.glade: Added support for updating with
	  Ctrl+Enter keys.
	* share/filters.glade: Added tooltips for permanent filters
	  (issue #17).

2013-04-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* notification.py: Fixed Facebook URLs opened from notification
	  (issue #25).
	* facebook/assistant.py: Fixed a Facebook authorization error
	  (issue #26).

2013-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.3 release.
	* twitter/getauthtoken.py: Updated Twitter OAuth URLs (issue #16).
	  Thanks @gion_XY & @Sururu_s2!

2013-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/entry.py: Removed depends on 'image' template.
	* updatewindow.py, update.glade: Added new short cut keys framework.

2012-12-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* output.py: Added checking for duplicated posts.

2012-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/*: Added support for all entry types on Tumblr.

2012-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/api.py, tumblr/account.py: Added support for 'post' &
	  'posts' API.

2012-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
