@@ -9,6 +9,7 @@
            type="text/javascript"></script>
 
    <link rel="stylesheet" href="default.css">
+   <link rel="stylesheet" href="font-awesome.min.css">
    <link rel="stylesheet" href="theme.css"  id="theme">
    <link rel="stylesheet" href="custom.css" id="custom">
 </head>
