@@ -32,9 +32,9 @@ div.link-name a { font-weight: bold; }
 
 /* for twitter */
 div.twitter .command { display: none; } 
-div.twitter .long-command img { vertical-align: -20%; } /* FIXME */
 div.twitter .togglelinks { position: absolute; margin-top: 2px; }
 div.twitter .datetime-dummy { display: block; visibility: hidden;}
+div.twitter .long-command, div.twitter .long-command a { color: blue; }
 
 /* for tumblr */
 div.tumblr blockquote { margin: 0px; padding: 0px; } 
