@@ -1,5 +1,7 @@
 2013-04-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* fontawesome-webfont.woff, font-awesome.min.css: Added Font
+	  Awesome Support.
 	* twitter/tweetentry.py, theme/Default/status.html, view.py:
 	  Improved a scheme for Twitter interfaces.
 
